[gd_scene load_steps=3 format=3 uid="uid://dq4c2yjekcute"]

[ext_resource type="Texture2D" uid="uid://b1ivfimnfvo15" path="res://assets/art/menu/116313.png" id="1_background"]
[ext_resource type="Script" path="res://scripts/menu/options_menu.gd" id="2_script"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -91.0
offset_top = -100.0
offset_right = 149.0
offset_bottom = 774.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_background")
expand_mode = 1
stretch_mode = 5

[node name="MenuPanel" type="Panel" parent="."]
modulate = Color(1, 1, 0.8, 0.95)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -135.0
offset_right = 133.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="SonidoButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_font_variation/variation_width = 150.0
text = "SONIDO"
flat = true

[node name="VisualButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_font_variation/variation_width = 150.0
text = "VISUAL"
flat = true

[node name="ControlesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_font_variation/variation_width = 150.0
text = "CONTROLES"
flat = true

[node name="IdiomaButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_font_variation/variation_width = 150.0
text = "IDIOMA"
flat = true

[node name="VolverButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_font_variation/variation_width = 150.0
text = "VOLVER"
flat = true
